[package]
name = "rustvalidity"
version = "0.1.0"
edition = "2021"
description = "A powerful, flexible, and easy-to-use validation library for Rust"
authors = ["Saeed Ghanbari"]
license = "MIT"
repository = "https://github.com/sgh370/rustvalidity"

[dependencies]
regex = "1.10.2"
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
rustvalidity-derive = { version = "0.1.0", path = "./rustvalidity-derive", optional = true }

[features]
default = []
derive = ["rustvalidity-derive"]

[workspace]
members = [
    ".",
    "rustvalidity-derive",
]
